Added open file functionality to toolstrip Tom Alex

--- a/Journal/Journal/Journal.csproj
+++ b/Journal/Journal/Journal.csproj
@@ -70,6 +70,12 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="OpenSource.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OpenSource.Designer.cs">
+      <DependentUpon>OpenSource.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="DialogWindows.resx">
@@ -83,6 +89,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OpenSource.resx">
+      <DependentUpon>OpenSource.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
