--- a/Journal/Journal/CryptNote.csproj
+++ b/Journal/Journal/CryptNote.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,6 +48,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="32bitEncryption.cs" />
+    <Compile Include="64bitCreateAccount.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="64bitCreateAccount.Designer.cs">
+      <DependentUpon>64bitCreateAccount.cs</DependentUpon>
+    </Compile>
+    <Compile Include="BinaryRW.cs" />
     <Compile Include="DialogWindows.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -85,6 +93,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="64bitCreateAccount.resx">
+      <DependentUpon>64bitCreateAccount.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DialogWindows.resx">
       <DependentUpon>DialogWindows.cs</DependentUpon>
     </EmbeddedResource>
@@ -117,6 +128,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
