Added ConnectDB.cs and a few UI for the new system

--- a/Journal/Journal/CryptNote.csproj
+++ b/Journal/Journal/CryptNote.csproj
@@ -56,7 +56,7 @@
     <StartupObject />
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>27806F5A48933D793146A7281AC5AD2B689A1D59</ManifestCertificateThumbprint>
@@ -75,6 +75,7 @@
     <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
@@ -97,7 +98,20 @@
       <DependentUpon>64bitCreateAccount.cs</DependentUpon>
     </Compile>
     <Compile Include="BinaryRW.cs" />
+    <Compile Include="ConnectDB.cs" />
+    <Compile Include="LoginDB.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoginDB.Designer.cs">
+      <DependentUpon>LoginDB.cs</DependentUpon>
+    </Compile>
     <Compile Include="Save_Open _File.cs" />
+    <Compile Include="SignUpUsername.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SignUpUsername.Designer.cs">
+      <DependentUpon>SignUpUsername.cs</DependentUpon>
+    </Compile>
     <Compile Include="Undo_Redo.cs" />
     <Compile Include="DialogWindows.cs">
       <SubType>Form</SubType>
@@ -161,6 +175,9 @@
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="LoginDB.resx">
+      <DependentUpon>LoginDB.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="OpenSource.resx">
       <DependentUpon>OpenSource.cs</DependentUpon>
     </EmbeddedResource>
@@ -174,6 +191,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SignUpUsername.resx">
+      <DependentUpon>SignUpUsername.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="CryptNote_1_TemporaryKey.pfx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -205,6 +225,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
